--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "nanoid": "^3.1.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "typeface-roboto": "^1.1.13",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4",
