--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3",
     "typeface-roboto": "^1.1.13",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4",
